--- a/references.bib
+++ b/references.bib
@@ -28,14 +28,22 @@
     year = {2013}
 }
 
-@article{Panthi2012,
+@inbook{Panthi2012,
+    address = {New Delhi},
     author = {Panthi, Vikas and Mohapatra, Durga Prasad},
+    booktitle = {Proceedings of International Conference on Advances in Computing},
+    doi = {10.1007/978-81-322-0740-5_33},
+    editor = {{Kumar M.}, Aswatha and R., Selvarani and Kumar, T V Suresh},
     file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/chp{\%}3A10.1007{\%}2F978-81-322-0740-5{\_}33.pdf:pdf},
+    isbn = {978-81-322-0740-5},
     mendeley-groups = {Testing},
     pages = {277--284},
-    title = {{Automatic Test Case Generation}},
+    publisher = {Springer India},
+    title = {{Automatic Test Case Generation Using Sequence Diagram}},
+    url = {http://dx.doi.org/10.1007/978-81-322-0740-5{\_}33},
     year = {2012}
 }
+
 
 @inproceedings{6847360,
     abstract = {One of main points of software testing is test coverage analysis because defects may exist in uncovered parts and appear when users use the software. Test coverage analysis is one process which is used for solving the uncovered testing. This process consists of code instrumentation, collecting coverage data during test execution, and analyzing the coverage measure. Test coverage analysis has to be applied with every level of testing. In addition, it has to be performed to conventional software and object-oriented software. Nowadays, object-oriented software is more interesting. However, we cannot use existing integration testing coverage measures with object- oriented software. In our previous paper, we propose the design of a tool for analyzing integration testing coverage for object-oriented software. This paper we continue our work by proposing an integration testing coverage tool for object-oriented software. This tool can analyze the integration testing coverage of object- oriented software. Moreover, it can generate additional test cases in case of there are uncovered methods that have not been tested by existing test cases.},
