Format item label style

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -176,8 +176,8 @@
 ซึ่งมีเงื่อนไขดังนี้
 
 \begin{enumerate}
-    \item[G:19] \code{student\_score < SCORE\_MINIMUM\_STATISFIED} \label{itm:studentscore}
-    \item[S:8]  \code{bonus\_score > 0} \label{itm:studentid}
+    \item[\code{G:19}] \code{student\_score < SCORE\_MINIMUM\_STATISFIED} \label{itm:studentscore}
+    \item[\code{S:8}]  \code{bonus\_score > 0} \label{itm:studentid}
 \end{enumerate}
 
 โดยในขั้นตอนนี้จะนำค่าคงที่ที่เก็บไว้ในขั้นตอน {\bf \constantExtracting}} มาแทนในตัวแปร \code{SCORE\_MINIMUM\_STATISFIED} 
