--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -7,7 +7,7 @@
 หนึ่งในกระบวนการพัฒนาซอฟต์แวร์ที่หลายหน่วยงานให้ความสำคัญ
 
 การสร้างกรณีทดสอบสำหรับ\FirstTimeDefine{\SUT}{\SUTEN} นั้นมีหลากหลายวิธีการขึ้นอยู่กับเป้าหมายของการดำเนินงาน 
-ทั้งการสร้างกรณีทดสอบเพื่อตรวจสอบว่า{\method}ภายใน\FirstTimeDefine{\CUT}{\CUTEN}\ ถูกเรียกใช้งานครบถ้วนแล้วหรือไม่ \cite{6847360}
+ทั้งการสร้างกรณีทดสอบเพื่อตรวจสอบว่า{\method}ภายใน\FirstTimeDefine{\CUT}{\CUTEN}\ ถูกเรียกใช้งานครบถ้วนสมบูรณ์ \cite{6847360}
 หรือสร้างกรณีทดสอบที่ครอบคลุมเงื่อนไขการตัดสินใจที่ปรากฏภายใน{\CUT} \cite{Luanghirun2016} ซึ่งเป็นการพิจารณาเพียงเฉพาะในคลาสเท่านั้น
 หากแต่เมื่อต้องการทดสอบการทำงานร่วมกันขององค์ประกอบอื่น ๆ ของ\FirstTimeDefine{\SUT}{\SUTEN} 
 ดังนั้นกรณีทดสอบที่สร้างขึ้นจำเป็นต้องครอบคลุมการเรียกใช้งานระหว่างกันขององค์ประกอบที่พัฒนาขึ้น
