--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -19,6 +19,6 @@
     \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequential) ไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Parallel) \label{enu:lim:seq}
     \item รองรับเฉพาะโปรแกรมที่มีจำนวนของไซโคลเมทิกภายในคลาสรวมกันน้อยกว่าหรือเท่ากับ 15
     \item รองรับการสร้างกรณีทดสอบที่สอดคล้องตามรูปแบบของชุดพัฒนา JUnit
-    \item รองรับการดำเนินงานแบบวงวน (Loop) 1 รอบ \label{enu:lim:loop}
-    \item ไม่รองรับการเรียกใช้ฟังก์ชันเวียนบังเกิด (Recursion)
+    % \item รองรับการดำเนินงานแบบวงวน (Loop) 1 รอบ \label{enu:lim:loop}
+    \item ไม่รองรับการเรียกใช้ฟังก์ชันเวียนเกิด (Recursion)
 \end{enumerate}
