--- a/limitation/research-steps.tex
+++ b/limitation/research-steps.tex
@@ -9,7 +9,7 @@
     \begin{enumerate}
         \item รวบรวมข้อมูลทดสอบ
         \item พัฒนาเครื่องมือเพื่อวิเคราะห์{\scg}
-        \item พัฒนาเครื่องมือสร้างกรณีทดสอลและข้อมูลนำเข้าที่สอดคล้องกับ{\TestPath}ที่เลือก จาก{\scg}ร่วมกับ{\cfg}
+        \item พัฒนาเครื่องมือสร้างกรณีทดสอบและข้อมูลนำเข้าที่สอดคล้องกับ{\TestPath}ที่เลือก จาก{\scg}ร่วมกับ{\cfg}
         \item ทดสอบและปรับปรุงผลการทำงานของเครื่องมือ
         \item สรุปผลการดำเนินงานและข้อเสนอแนะ
     \end{enumerate}
