--- a/related/test-case-generation.tex
+++ b/related/test-case-generation.tex
@@ -10,7 +10,7 @@
 
 วิธีการนี้เป็นกระบวนการสร้างกรณีทดสอบที่ใช้การวิเคราะห์ชุดคำสั่งควบคุมการไหลของโปรแกรมแล้วสร้างเป็นเงื่อนไขของทางเดิน 
 ใช้วิเคราะห์หาข้อมูลที่สามารถทำให้กรณีทดสอบนั้นสามารถทดสอบทางเดินที่เลือกได้ ซึ่งวิธีนี้มีประสิทธิภาพเรื่องความครอบคลุมของ{\sourcecode}ได้เป็นอย่างดี
-หากแต่มีข้อเสียที่พบคือ โปรแกรมที่ใช้งานจริงนั้นมักจะมีเงื่อนไขหลากหลายและซับซ้อนเกินกว่าจะสร้างข้อมูลทดสอบอย่างอัตโนมัติได้ทั้งหมด 
+หากแต่ข้อเสียที่พบคือ โปรแกรมที่ใช้งานจริงนั้นมักจะมีเงื่อนไขหลากหลายและซับซ้อนเกินกว่าจะสร้างข้อมูลทดสอบอย่างอัตโนมัติได้ทั้งหมด 
 นอกจากนั้นยังจำเป็นจะต้องอาศัยการตัดสินใจจากผู้ใช้งานในบางกรณี
 
 \subsubsection{Random testing}
@@ -19,8 +19,8 @@
 จากศึกษาพบว่าข้อมูลที่ทำให้เกิดข้อผิดพลาดนั้นมีแนวโน้มที่จะอยู่รวมกันเป็นรูปแบบ %ดัง{\figref{fig:failureRegionPattern}} 
 ดังนั้นกรณีทดสอบที่สร้างขึ้นควรจะต้องกระจายให้ครอบคลุมทั้งกลุ่มข้อมูลนำเข้า (Input domain) เพิ่มโอกาสการค้นหาข้อผิดพลาดภายในโปรแกรม 
 ซึ่งมีแนวทาง Adaptive Random Testing โดย Chan และคณะ \cite{Chan2004}\ ที่พัฒนาขึ้นเพื่อเพิ่มประสิทธิภาพของ Random testing ในรูปแบบเดิม 
-หากแต่ปัญหาของการทำ Random testing นั้นก็เกิดมาจากการต้องการสุ่มค่านั้นเอง 
-เพราะมีโอกาสที่ค่าที่สุ่มขึ้นมานั้นมีจำนวนมาและไม่สามารถค้นพบข้อผิดพลาดที่อยู่ภายในโปรแกรมเลย ดังนั้นวิธีการหนึ่งที่มักจะอ้างถึงใน Adaptive Random Testing 
+หากแต่ปัญหาของการทำ Random testing นั้นเกิดมาจากการต้องการสุ่มค่านั้นเอง 
+เพราะมีโอกาสที่ค่าที่สุ่มขึ้นมานั้นมีจำนวนมากและไม่สามารถค้นพบข้อผิดพลาดที่อยู่ภายในโปรแกรม ดังนั้นวิธีการหนึ่งที่มักจะอ้างถึงใน Adaptive Random Testing 
 นั้นก็คือการกำหนดกลุ่มข้อมูลที่เป็นไปได้ (Fixed-Sized-Candidate-Set: FSCS-ART) ของ Adaptive Random Testing 
 ด้วยการกำหนดค่าสูงสุดหรือต่ำสุดที่ต้องการสุ่มค่าออกมากได้ กำหนดรูปแบบหรือประเภทของข้อมูลที่ต้องการสุ่ม 
 เพื่อให้ค่าที่สุ่มขึ้นมานั้นมีโอกาสในการค้นพบข้อผิดพลาดมากขึ้น % ใกล้เคียงกับความต้องการมากที่สุด
