--- a/objective/objective.tex
+++ b/objective/objective.tex
@@ -1,8 +1,3 @@
 \section{วัตถุประสงค์ของงานวิจัย}
 \label{sec:objective}
-
-\begin{enumerate}
-    \item ศึกษาและออกแบบแนวทางการสร้างการกรณีทดสอบจาก{\TestPath}ที่ได้จาก{\scg}สำหรับภาษาจาวา\label{obj:designandresearch}
-    \item พัฒนาเครื่องมือตามแนวทางการสร้างกรณีทดสอบ ข้อ \ref{obj:designandresearch}
-\end{enumerate}
-
+    ศึกษา ออกแบบ และพัฒนาเครื่องมือแนวทางการสร้างการกรณีทดสอบจาก{\TestPath}ที่ได้จาก{\scg}สำหรับภาษาจาวา\label{obj:designandresearch}
