Fix academic standing

--- a/coverpage-config.tex
+++ b/coverpage-config.tex
@@ -12,6 +12,6 @@
 \newcommand{\address}{17/8 หมู่ 18 ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120}
 \newcommand{\telephone}{061-629-9905}
 \newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
-\newcommand{\advisor}{รองศาสตราจารย์.ดร.ธาราทิพย์ สุวรรณศาสตร์}
+\newcommand{\advisor}{รศ.ดร. ธาราทิพย์ สุวรรณศาสตร์}
 \newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, \scg}
 \newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
