Fix misspelling word

--- a/coverpage-config.tex
+++ b/coverpage-config.tex
@@ -2,10 +2,10 @@
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEnglishName}{Test case generation from Java static call graph}
+\newcommand{\ThesisEnglishName}{Test Case Generation from Java Static Call Graph}
 \newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
 \newcommand{\studentid}{5870972621}
-\newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
+\newcommand{\curriculumn}{วิทยาศาสตรมหาบัณฑิต}
 \newcommand{\major}{วิศวกรรมซอฟต์แวร์}
 \newcommand{\department}{วิศวกรรมคอมพิวเตอร์}
 \newcommand{\faculty}{วิศวกรรมศาสตร์}
