--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -25,7 +25,7 @@
     % \input{edit-log}
     % \clearpage
 
-    % \makethesiscover
+    \makethesiscover
 
     \pagenumbering{arabic}
     \rhead{\thepage}
