--- a/coverpage-config.tex
+++ b/coverpage-config.tex
@@ -2,7 +2,7 @@
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEnglishName}{Test Case Generation from Java Static Call Graph}
+\newcommand{\ThesisEnglishName}{Test Case Generation from a Java Static Call Graph}
 \newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
 \newcommand{\studentid}{5870972621}
 \newcommand{\curriculumn}{วิทยาศาสตรมหาบัณฑิต}
