--- a/edit-msg.tex
+++ b/edit-msg.tex
@@ -2,21 +2,28 @@
 \begin{table}[ht!]
     \caption{รายการแก้ไขจากความเห็น รศ.ดร. พรศิริ หมื่นไชยศรี}
     \centering
-    \begin{tabularx}{\textwidth}{|l|l|l|X|}
+    \begin{tabular} % {\textwidth}{|l|l|l|X|}
         \hline
         \rowcolor{LightGray} 
         {\bf รายการ}    & {\bf หัวข้อ}                            & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
-        1.              & วิธีนี้รับประกันการครอบคลุมใด มากน้อยแค่ไหน    & สถิต หรือ สถิตย์          & ตรวจสอบจากพจานานุกรมฉบับสำนักงานราชบัณฑิตยสภาเรียบร้อยแล้ว \\ \hline
-        2.              & ต่างจาก Symbolic execution อย่างไร      & xxx                   & eeee \\ \hline
+        1.              & วิธีนี้รับประกันการครอบคลุมใด มากน้อยแค่ไหน    & ข้อที่ \ref{enu:lim:branchcoverage} จาก ขอบเขตงานวิจัย                   & เพิ่มเติมข้อกำหนด \\ \hline
+        2.              & ต่างจาก Symbolic execution อย่างไร      
+                        & -                     
+                        & ไม่ต่างครับ เพราะเป็นการนำเอา Symbolic execution ที่อยู่หลายคลาสบนทางเดินทดสอบมาพิจารณาร่วมกัน \\ \hline
         3.              & งานนี้ทำงานระดับ Unit testing หรือ Integration testing ทำเพียง 1 คลาส หรือไม่ 
-                                                                & xxx                   & xxxxx \\ \hline
-        4.              & ผลลัพธ์มีอะไรบ้าง                         & xxx                   & xxxx \\ \hline
-        5.              & ปรับตัวอักษรใหญ่แต่ละคำ                    &                       &           \\ \hline 
-        6.              & อธิบายการศึกษาโครงสร้าง (ชื่อเดิม สร้างกราฟ) & xxx                   & xxx \\ \hline
-        7.              & แก้คำผิด                                & xxx                   & yyy \\ \hline
-        8.              & รองรับลูปหรือไม่                          & xxx                   & yyy \\ \hline
-        9.              & ใช้กราฟมาช่วยในข้อง 4.2.2 อย่างไร         & xxx                   & yyy \\ \hline
-    \end{tabularx}
+                                                                & -
+                                                                & ทำระดับ Integration Testing ที่หลายคลาสทำงานร่วมกัน \\ \hline
+        4.              & ผลลัพธ์มีอะไรบ้าง                         & -                     & กรณีทดสอบ \\ \hline
+        5.              & ปรับตัวอักษรใหญ่แต่ละคำ                    & หัวข้อภาษาอังกฤษ         & ปรับเป็นตัวอักษรใหญ่เมื่อเริ่มคำ \\ \hline 
+        6.              & อธิบายการศึกษาโครงสร้าง (ชื่อเดิม สร้างกราฟ) & ข้อ 1 และ 2 หัวข้อ 4.1.2 & เพิ่มเนื้อคำอธิบายวิธีการสร้างกรฟา \\ \hline
+        7.              & แก้คำผิด                                & ข้อ 4.2.2              & แก้ไขคำว่า SATISFIED ให้ถูกต้อง \\ \hline
+        8.              & รองรับลูปหรือไม่                          & ขอบเขต ข้อ 7 หัวข้อที่ 8   & เพิ่มข้อความรองรับ Loop \\ \hline
+        9.              & ใช้กราฟมาช่วยในข้อง 4.2.2 อย่างไร         
+                        & -                     
+                        & เพื่อให้ทราบว่ามีเงื่อนไขใดบ้างที่อยู่บนเส้นทางทดสอบที่เลือกมาจากข้อ 4.2.1 ตลอดจนชนิดของรายการข้อมูลนำเข้าที่ได้จากรายการพารามิเตอร์ของ method signature 
+                          ท้ายที่สุดนั้น ช่วยให้สามารถตัดรายการของเงื่อนไขที่ไม่จำเป็นต่อการสร้างกรณีทดสอบออกไป 
+                          ในกรณีที่รายการตัวแปรบนเงื่อนไขนั้นไม่มีความสัมพันธ์เกี่ยวข้องใดๆ กับรายการข้อมูลนำเข้า\\ \hline
+    \end{tabular}
 \end{table}
 
 \begin{table}[ht!]
@@ -26,8 +33,7 @@
         \hline
         \rowcolor{LightGray} 
         {\bf รายการ}    & {\bf หัวข้อ}                            & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
-        1.              & นิยาม Call graph ยังไม่ชัดเจน             & xxx                   & yyy \\ \hline
-        2.              & ขอบเขตข้อ 7, 8, 10 (ก่อนแก้ไข) เป็นข้อจำกัดของกราฟหรืออะไร      & xxx                   & eeee \\ \hline
+        1.              & นิยาม Call graph ยังไม่ชัดเจน             & ข้อ 2.1.2 และข้อ 1 หัวข้อ 4.1.2       & เพิ่มนิยามและวิธีการสร้าง \\ \hline
     \end{tabularx}
 \end{table}
 
@@ -39,6 +45,23 @@
         \rowcolor{LightGray} 
         {\bf รายการ}    & {\bf หัวข้อ}                            & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
         1.              & แก้ไขคำผิด                              & หน้าปก                 & {\bf "วิทยาศาสตร์มหาบัณฑิต"} เป็น {\bf "วิทยาศาสตรมหาบัณฑิต"} \\ \hline
+        2.              & ขอบเขตข้อ 7, 8, 10 (ก่อนแก้ไข) เป็นข้อจำกัดของกราฟหรืออะไร      
+                        & -                   
+                        & - ข้อ 7 เป็นข้อจำกัดของกราฟและการสร้างข้อมูลทดสอบ, \newline 
+                          - ข้อ 8 เนื่องจากใช้วิธีการสร้างกรณีทดสอบโดยพิจารณาจากเงื่อนไขที่พบบนทางเดินทดสอบ หากพบเงื่อนไขมากหรือซับซ้อนจะส่งผลต่อประสิทธิภาพการทำงาน \newline  
+                          - ข้อ 10 กราฟไม่สามารถจำลองโครงสร้างแบบ Recursive ได้ จึงละเว้นไว้ อีกทั้งงานวิจัยชิ้นนี้เน้นการทดสอบเพื่อค้นหาข้อผิดพลาดที่เกิดจากการเชื่อมต่อกันระหว่างคลาส \\ \hline
+    \end{tabularx}
+\end{table}
+
+\begin{table}[ht!]
+    \caption{รายการแก้ไขอื่นๆ}
+    \centering
+    \begin{tabularx}{\textwidth}{|l|l|l|X|}
+        \hline
+        \rowcolor{LightGray} 
+        {\bf รายการ}    & {\bf หัวข้อ}                                            & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
+        1.              & ตัดขอบเขตข้อ 2 และ 3 ทิ้งไปเนื่องจากยังหาจำนวนที่ชัดเจนไม่ได้     & ขอบเขตงานวิจัย          & ลบข้อความ \\ \hline
+        1.              & ขอบเขตให้ชัดเจนยิ่งขึ้น                                     & ข้อ 1 หัวข้อที่ 6          & แก้ไขข้อความ  \\ \hline
         2.              & ขอบเขตข้อ 7, 8, 10 (ก่อนแก้ไข) เป็นข้อจำกัดของกราฟหรืออะไร      & xxx                   & eeee \\ \hline
     \end{tabularx}
 \end{table}
