--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -19,8 +19,8 @@
 \subsection{การวิเคราะห์ข้อมูลเบื้องต้น}
 \label{subs:introsection}
 
-ในขั้นตอนนี้เริ่มต้นด้วยการนำเข้าข้อมูลแพคเกจและแหล่งข้อมูล{\sourcecode}ซึ่ง{\tester}ต้องการสร้างกรณีทดสอบไว้ในฐานข้อมูล เพื่อใช้เป็นข้อมูลในการวิเคราะห์ข้อมูล{\sourcecode}
-จากนั้นจึงทำสำเนา{\sourcecode}จาก{\Repository} ตามที่ผู้ใช้งานระบุเข้ามาเก็บไว้ภายในฐานข้อมูล  เพื่อใช้รวบรวม{\StaticInformation} 
+ในขั้นตอนนี้เริ่มต้นด้วยการนำเข้าข้อมูลแพคเกจและแหล่งข้อมูล{\sourcecode}ซึ่ง{\tester}ต้องการสร้างกรณีทดสอบไว้ในฐานข้อมูล 
+เพื่อใช้เป็นข้อมูลในการวิเคราะห์ข้อมูล{\sourcecode} จากนั้นจึงทำสำเนา{\sourcecode}จาก{\Repository} ตามที่ผู้ใช้งานระบุเข้ามาเก็บไว้ภายในฐานข้อมูล  เพื่อใช้รวบรวม{\StaticInformation} 
 โดยสนใจเพียงเฉพาะ{\class}ซึ่งบรรจุอยู่ภายใน\FirstTimeDefine{\Package}{\PackageEN} ตามที่ผู้ใช้งานระบุ 
 โดยกำหนดให้เป็น {\bf \CUT} ทั้งนี้กระบวนการจะประกอบไปด้วย 3 ขั้นตอนด้วยกัน นั่นคือ
 {\constantExtracting}, {\graphCreation} 
@@ -61,22 +61,43 @@
 \label{sec:sub:sub:graphCreation}
 
 กระบวนการสร้างกราฟนั้นจะรับข้อมูล{\sourcecode}จาก{\Repository}ร่วมกับข้อมูลแพคเกจที่{\tester}สนใจมาประกอบกัน 
-เพื่อใช้สร้างกราฟ โดยแบ่งออกเป็น 2 กระบวนการย่อยด้วยกัน 
-คือ การสร้าง{\scg} และการสร้าง{\cfg} โดยมีรายละเอียดดังต่อไปนี้
+เพื่อใช้สร้างกราฟ โดยแบ่งออกเป็น 2 กระบวนการย่อยด้วยกัน คือ การสร้าง{\scg} และการสร้าง{\cfg} โดยมีรายละเอียดดังต่อไปนี้
 
 \begin{enumerate}
-    \item {\bf สร้าง{\scg}} อ่านข้อมูล{\CUT}ตามที่ผู้ใช้งานสนใจ แล้วจึงสร้าง{\scg} โดยผลลัพธ์ที่ได้นั้นจะแบ่งเป็น 3 กลุ่ม ได้แก่
+    \item {\bf สร้าง{\scg}} ขั้นตอนนี้จะอ่านข้อมูล{\CUT}ตามรายการไฟล์ใน{\Package}ที่ผู้ใช้งานสนใจ 
+        แล้วจึงค้นหา{\callingStatement} เพื่อกำหนด{\callingMethod}และ{\calledMethod}ตามลำดับ 
+        โดยเริ่มต้นจาก{\class}ที่พบ{\method}~\code{main}~เป็นลำดับแรกเพื่อหา{\Node}เริ่มต้นหรือ{\Node}หัว
+        และ{\class}ปลายทางซึ่งปรากฎ~\calledMethod~เป็น{\Node}หาง 
+        ดังนั้นหาก{\sourcecode}ของ{\SUT}ประกอบด้วยคลาส~\code{C_1,~C_2~C_3} ซึ่งแต่ละคลาสจะประกอบไปด้วย{\method}
+        \code{\{m_{11},~m_{12}\}},~\code{\{m_{21},~m_{22},~m_{23}\}}, และ \code{\{m_{31},~m_{32}\}} ตามลำดับ
+        ซึ่งปรากฎ{\callingStatement}ภายใน{\method}~\code{m_{11}}~เรียกไปยัง{\method}~\code{m_{21}},
+        และ~\code{m_{22}} ซึ่งในขั้นตอนนี้จะรวมรวม{\callingStatement}ที่พบทั้งหมดในทุก ๆ {\class}ของ{\SUT}
+        เพื่อสร้างเป็นกราฟดัง~\figref{fig:exampleSCG} โดยผลลัพธ์ที่ได้นั้นจะแบ่งเป็น 3 กลุ่ม ได้แก่
         \begin{enumerate}
             \item การเรียกใช้งานระหว่าง{\CUT}ด้วยกัน \label{ord:scgcut} 
             \item การเรียกใช้งานระหว่าง{\CUT}และ{\class}ภายในชุดพัฒนาของจาวา (Java SDK) \label{ord:scgjdk} 
             \item การเรียกใช้งานระหว่าง{\CUT}และชุดคำสั่งภายนอก (\code{3^{rd}} party library) \label{ord:scg3rd} 
         \end{enumerate}
-        \-\hspace{1cm}ซึ่งในแนวทางการดำเนินงานนี้จะสนใจเฉพาะ{\scg}ของ{\CUT}เท่านั้น ดังนั้นในขั้นตอนนี้ไม่สนใจกราฟที่เกิดจากการเรียกใช้ในข้อ 1.2
+        \-\hspace{1cm}ซึ่งในแนวทางการดำเนินงานนี้จะสนใจเฉพาะ{\scg}ของ{\CUT}เท่านั้น 
+        ดังนั้นในขั้นตอนนี้ไม่สนใจกราฟที่เกิดจากการเรียกใช้ในข้อ 1.2 
         และ 1.3 ตลอดจนกราฟที่เกิดจากการสร้างวัตถุใหม่ เพื่อให้ได้{\scg}เฉพาะ{\CUT} ดังเช่น{\scg}โปรแกรมคํานวณเกรดนิสิต 
         ใน\figref{fig:scggrading}
 
-    \item {\bf สร้าง{\cfg}} โดยจะอ่านข้อมูลของ{\CUT}นำมาสร้าง{\cfg}และจัดเก็บข้อมูลไว้ภายในฐานข้อมูล
+    \item {\bf สร้าง{\cfg}} โดยจะอ่านข้อมูลของ{\CUT} ทีละ{\method} เพื่อนำมาสร้าง{\cfg}แสดงโครงสร้างภายใน{\method}
+        หาก \code{G_{11}} แทน{\cfg}ของ{\method}~\code{m_{11}} และให้ \code{G_1~=~\{G_{11},~G_{12}\}} 
+        เป็นเซตของ{\cfg}ของแต่ละ{\method}ของ{\class}~\code{C_1} จาก\figref{fig:exampleSCG} 
+        จะเก็บข้อมูลของ{\CUT}เพื่อสร้าง \code{G_2}~และ~\code{G_3} ซึ่งเป็นเซตของ{\cfg}ของแต่ละ{\method}ของ{\class}
+        \code{C_2} และ \code{C_2} ซึ่งข้อมูลที่ได้นี้จะจัดเก็บข้อมูลไว้ภายในฐานข้อมูลต่อไป
+        ทั้งนี้ในขั้นตอนนี้จะสร้างเส้นทางที่เป็นไปได้ซึ่งสั้นที่สุดโดยเริ่มต้นจาก{\sourcenode}ไปยัง{\sinknode}ของแต่ละ{\method} 
+        โดยจะต้องเป็นเส้นทางที่ผ่าน{\callingStatement}
 \end{enumerate}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=.9\textwidth]{example-scg}
+    \caption{ตัวอย่าง{\scg}สำหรับคลาส \code{C_1,~C_2,}~และ~\code{C_3}}
+    \label{fig:exampleSCG}
+\end{figure}
 
 เมื่อสิ้นสุดกระบวนการจะนำข้อมูล{\bf {\scg}} และ{\bf {\cfg}} ที่ได้จัดเก็บลง {\it ฐานข้อมูล} เพื่อจัดเตรียมไว้สำหรับ 
 {\bf ขั้นตอนการสร้างกรณีทดสอบ} และ{\bf เปรียบเทียบผลลัพธ์การดำเนินการ} ต่อไป
@@ -196,11 +217,11 @@
 
 เมื่อพิจารณาข้อมูล\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN} ของ{\method} \code{score} 
 ของ{\class} \code{SimpleGrading} พบว่า{\method}นี้ต้องการพารามิเตอร์ทั้งหมด 3 ค่า ด้วยกัน คือ \code{student\_id:String}, 
-\code{student\_score:int} และ\,\code{bonus\_score:int} 
-แต่จากตัวแปรที่พบใน{\PredicateNode}นั้นจะมีเพียง \code{student\_score} และ\code{bonus\_score} 
+\code{student\_score:int} และ~\code{bonus\_score:int} 
+แต่จากตัวแปรที่พบใน{\PredicateNode}นั้นจะมีเพียง \code{student\_score} และ~\code{bonus\_score} 
 จึงใช้เงื่อนไขที่พบนั้นเป็นแนวทางการสร้าง{\testData}{\TestPath} คงเหลือตัวแปร \code{student\_id} จึงใช้การสุ่มข้อมูลเพื่อสร้าง{\testData}
 โดยพิจารณาจากค่าคงที่ที่มีประเภทข้อมูลแบบเดียวกัน ซึ่งจัดเก็บ{\sourcecode}จากกระบวนการก่อนหน้า 
-ซึ่งกำหนดให้ข้อมูลทดสอบที่สร้างขึ้นได้ในกระบวนการนี้มีรายการดัง\tabref{tab:GRTRandom}
+ซึ่งกำหนดให้ข้อมูลทดสอบที่สร้างขึ้นได้ในกระบวนการนี้มีรายการดัง~\tabref{tab:GRTRandom}
 
 \begin{table}[ht!]
     \centering
