--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -27,8 +27,8 @@
 1) การปรับเปลี่ยนค่าตัวของตัวแปรด้วยกฎการแก้ไขปัญหาใช้ลดขนาดของปริภูมิคำตอบ ตลอดจนกำจัดตัวแปรที่ไม่เกี่ยวข้องกับการสร้างชุดคำตอบ 
 เพื่อนำมาใช้ในขั้นตอนการแตกกิ่ง (Branching operation) และ 2) การคำนวณช่วงค่าที่เป็นไปของตัวแปรเพื่อใช้ในขั้นตอนการกำหนดขอบเขต
 ซึ่งงานวิจัยนี้ผู้วิจัยได้ปรับปรุงประสิทธิภาพการทำงานจาก \code{O(n^2)} เป็น \code{O(n)} และเมื่อนำไปทดสอบกับชุดข้อมูลทดสอบภาษา C ทั้งหมด 4 โปรแกรม
-ผลปรากฎว่า วิธีการนี้สามารถสร้างกรณีทดสอบได้ครอบคลุมเงื่อนไขการดำเนินงานทั้งหมด เมื่อเทียบกับการสร้างกรณีทดสอบด้วย ขั้นตอนวิธีเชิงพันธุกรรม (Genetic algorithm)
-หรือ การจำลองการอบเหนียว (simulated annealing) % Ref: https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
+ผลปรากฏว่า วิธีการนี้สามารถสร้างกรณีทดสอบได้ครอบคลุมเงื่อนไขการดำเนินงานทั้งหมด เมื่อเทียบกับการสร้างกรณีทดสอบด้วย ขั้นตอนวิธีเชิงพันธุกรรม (Genetic algorithm)
+หรือ การจำลองการอบเหนียว (Simulated annealing) % Ref: https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
 
 จะเห็นได้จากการทดลองของผู้วิจัยที่สามารถสร้างกรณีทดสอบด้วย{\Algorithm}ที่นำเสนอ สามารถสร้างกรณีทดสอบได้ครอบคลุมมากกว่า{\Algorithm}ที่นำมาเปรียบเทียบ 
 โดยใช้เพียง{\StaticInformation}เท่านั้น ซึ่งไม่จำเป็นต้องส่งกระทำการทดสอบ{\sourcecode}แต่อย่างใด หากแต่ข้อมูลทดสอบที่ใช้ในการทดลองนี้มีขนาดเล็ก 
@@ -55,7 +55,7 @@
 \subsection{งานวิจัย {\it "Eclat: Automatic Generation and Classification of Test Inputs"} \cite{Heaton2000}}
 \label{sec:sub:eclat}
 
-เนื่องจากการข้อมูลที่จะนำมาทดสอบนั้นมีขนาดใหญ่ ดังนั้นงานวิจัยนี้จึงเสนอแนวทางในการวิเคราะห์เพื่อหาซับเซตของข้อมูลนำเข้าทั้งหมดที่สามารถค้นพบข้อผิดพลาด
+เนื่องจากข้อมูลที่จะนำมาทดสอบนั้นมีขนาดใหญ่ ดังนั้นงานวิจัยนี้จึงเสนอแนวทางในการวิเคราะห์เพื่อหาซับเซตของข้อมูลนำเข้าทั้งหมดที่สามารถค้นพบข้อผิดพลาด
 ของซอฟต์แวร์ภายใต้การทดสอบได้ ซึ่งงานวิจัยได้นำเสนอวิธีการเลือกกลุ่มข้อมูลนำเข้าโดยพิจารณาจากส่วนย่อยของซอฟต์แวร์ 
 ประกอบกับชุดข้อมูลที่ทำให้โปรแกรมทำงานได้ถูกต้อง ซึ่งผลลัพธ์ที่ทดลองกับกลุ่มตัวอย่างได้พบว่าวิธีการนี้สามารถลดชุดข้อมูลนำเข้าที่ใช้ทดสอบได้
 โดยยังมีประสิทธิภาพในการค้นหาข้อผิดพลาดไม่ต่างไปจากเดิม
