--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -12,6 +12,11 @@
 \subsubsection{\FirstTimeDefine{\cfg}{\cfgen}}
 \label{sec:sub:sub:cfg}
 
+ด้วยความต้องการที่หลากหลายในการพัฒนา{\software} อีกทั้งเทคโนโลยีที่หลากหลายทั้งแพลตฟอร์ม เครื่องมือพัฒนา ตลอดจนภาษาที่ใช้งาน
+ซึ่งนักพัฒนาเองย่อมเลือกใช้เทคโนโลยีที่มีความเหมาะสมและสามารถตอบสนองกับความต้องการนั้นได้มากที่สุด ด้วยความหลากหลายนี้เอง
+ทำให้{\tester}เองไม่คุณชินกับภาษาหรือเทคโนโลยีที่นักพัฒนาเลือกนำมาใช้งาน จึงเป็นการยากที่จะทำความเข้าใจกับโครงสร้างโปรแกรม
+ตลอดจนสร้างกรณีทดสอบที่สามารถทดสอบครอบคลุมส่วนประกอบของซอฟต์แวร์ได้ {\cfg} จึงเป็นกราฟที่จำลองโครงสร้างของ{\sourcecode}
+ให้อยู่อยู่ในรูปความสัมพันธ์ของ {\Node} และ {\Edge}
 หากแทน{\software} \code{P} ที่แทนความสัมพันธ์ของโครงสร้างภายในด้วยกราฟ \code{G = (V, A)} เมื่อ \code{V (Vertex)} 
 คือเซตของ{\Node}ในกราฟ โดยแต่ละ{\Node}แทนแถวคำสั่งใน{\sourcecode} และ \code{A\ (Arcs)} 
 คือเซตของคู่ลำดับโหนดที่มีความสัมพันธ์กันภายในกราฟซึ่งเชื่อมต่อกันแบบมีทิศทาง หาก \code{(v_m, v_n) \in A} จะหมายถึง 
@@ -33,7 +38,7 @@
 จาก\figref{fig:pseudocodeGrading} เป็นรหัสเทียม (Psuedo code) แสดงวิธีการคำนวณเกรดของนิสิตโดยรับข้อมูลคะแนน \code{(student\_score)} 
 และคะแนนพิเศษ \code{(bonus\_score)} หากคะแนนเป็น 0 จะได้เกรด \code{I}\ หากนิสิตได้คะแนนต่ำกว่า 80 คะแนน 
 จะได้เกรด \code{U}\ หากคะแนนอยู่ระหว่าง 80 ไปจนถึง 100 คะแนน นิสิตจะได้เกรด \code{S}\ ซึ่งจากชุดรหัสเทียมนี้ 
-สามารถแปลงเป็นกราฟโปรแกรม เพื่อทำความเข้าใจโครงสร้างได้ดัง{\figref{fig:programGraph} 
+สามารถแปลงเป็นกราฟโปรแกรม เพื่อทำความเข้าใจโครงสร้างได้ดัง{\tabref{tab:simpleTestCase} 
 
 \begin{figure}[ht!]
     \begin{algorithm}[H]
@@ -119,11 +124,19 @@
 การพัฒนา{\software}เชิงวัตถุ (Object-oriented programming) เป็นการรวมพฤติกรรมและความสามารถที่คล้ายคลึงกันเข้าไว้ด้วยกัน 
 \cite{kindler2011} ในลักษณะของ\FirstTimeDefine{\class}{\classEN} \FirstTimeDefine{\method}{\methodEN} และ 
 \FirstTimeDefine{\attribute}{\attributeEN} 
-ดังนั้นหากต้องทำเข้าใจปฏิสัมพันธ์ระหว่าง{\class}ของ{\SUTEN} จาก{\sourcecode} ที่ได้รับมานั้น 
+ดังนั้นหากต้องทำเข้าใจปฏิสัมพันธ์ระหว่าง{\class}ของ{\SUT} จาก{\sourcecode} ที่ได้รับมานั้น 
 {\scg}จึงเข้าช่วยแสดงความสัมพันธ์ในรูปแบบของ\FirstTimeDefine{\DirectedMultiGraph}{\DirectedMultiGraphEN}
-หากให้{\software} \code{P} แทนด้วยกราฟ \code{G} สามารถเขียนความสัมพันธ์ในรูปของทูเปิ้ล 8 รายการ 
+โดยจะจำลองความสัมพันธ์ระหว่างวัตถุที่มีการดำเนินงานร่วมกัน โดยกำหนดให้ {\Node} แทนวัตถุที่กำลังพิจารณา ซึ่งอยู่ภายใต้ {\SUT}
+และ {\Edge} แทนความสัมพันธ์ระหว่างวัตถุซึ่งพบการเรียกใช้งานข้ามวัตถุ 
+ซึ่งกราฟจะได้จากการรวมรวม{\StaticInformation}จาก{\sourcecode} เพื่อค้นหา{\statement}ที่ปรากกฎการเรียกใช้ หรือ 
+\FirstTimeDefine{\callingStatement}{\callingStatementEN} 
+จาก{\sourcecode}ที่มีอยู่ทั้งหมดภาย{\SUT}ภายใต้{\Package}ที่กำหนด โดยที่{\method}ซึ่งปรากฎ{\callingStatement} 
+จะเรียกว่า \FirstTimeDefine{\callingMethod}{\callingStatementEN} และ{\method}ที่ถูกเรียกไปใน{\callingStatement}นั้น
+จะถูกเรียกว่า \FirstTimeDefine{\calledMethod}{\calledMethodEN} โดยใน 1 {\method} นั้น 
+อาจพบ{\callingStatement}อยู่หลายบรรทัด และเรียกไปยังหลาย{\calledMethod} จากนั้นจึงกำหนดแผ่นป้าย
+ให้กับ{\Edge}ด้วยการเชื่อมระหว่าง{\callingMethod}และ{\calledMethod}ด้วยเครื่องหมายโคลอน (":") 
+ดังนั้น หากแทนให้{\software} \code{P} แทนด้วยกราฟ \code{G} สามารถเขียนความสัมพันธ์ในรูปของทูเปิ้ล 8 รายการ 
 \code{G = (V, E, tail, head, \ell_V, \ell_E, \sigma, \delta)} \code{V} คือ เซตของ{\Node}ภายในกราฟ ซึ่งมีสมาชิกจำกัด
-
 
 \begin{table}[ht!]
     \begin{tabular}{ll}
