--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -130,8 +130,8 @@
 \newcommand{\constantExtracting}{การรวบรวมค่าคงที่}
 \newcommand{\constantExtractingEN}{Constant extracting}
 
-\newcommand{\graphCreation}{การสร้างกราฟ}
-\newcommand{\graphCreationEN}{Graph creation}
+\newcommand{\graphCreation}{วิเคราะห์{\sourcecode}}
+\newcommand{\graphCreationEN}{Source code analysis}
 
 \newcommand{\sourcecodeInstrumention}{แทรกคำสั่งในรหัสต้นฉบับ}
 \newcommand{\sourcecodeInstrumentionEN}{Source code instrumentation}
@@ -162,3 +162,15 @@
 
 \newcommand{\pathConditions}{เงื่อนไขของเส้นทาง}
 \newcommand{\enum}{อีนัม}
+
+\newcommand{\callingMethod}{เมธอดเรียกใช้}
+\newcommand{\callingMethodEN}{Calling method}
+
+\newcommand{\calledMethod}{เมธอดที่ถูกเรียกใช้}
+\newcommand{\calledMethodEN}{Called method}
+
+\newcommand{\statement}{แถวคำสั่ง}
+\newcommand{\statementEN}{Statement}
+
+\newcommand{\callingStatement}{แถวคำสั่งเรียกใช้}
+\newcommand{\callingStatementEN}{Calling statement}
